# simcont

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  requirements_before_update_openai.txt
drf_app/: admin.py  apps.py  langutils.py  models.py  serializers.py  signals.py  tasks.py  tests.py  tests_lu.py  tests_view.py  validators.py  views.py
drf_app/migrations/: 0001_initial.py  0002_alter_lemma_translate_alter_vocabulary_lang_from_and_more.py  0002_rename_users_vocabulary_student.py  0003_alter_vocabulary_order_lemmas.py  0003_rename_student_vocabulary_students.py  0004_alter_vocabulary_order_lemmas.py  0004_alter_vocabulary_students.py  0005_alter_vocabulary_order_lemmas.py  0005_rename_uservocabulary_studentvocabulary_and_more.py  0006_alter_vocabulary_order_lemmas.py  0006_rename_studentvocabulary_uservocabulary_and_more.py  0007_alter_vocabulary_order_lemmas.py  0007_rename_uservocabulary_learnervocabulary_and_more.py  0008_alter_vocabulary_order_lemmas.py  0008_rename_lemma_vocabularylemma_throughlemma_and_more.py  0009_alter_lemma_pos.py  0009_alter_vocabulary_order_lemmas.py  0010_alter_lemma_pos.py  0010_alter_vocabulary_order_lemmas.py  0011_alter_lemma_pos.py  0011_lemma_translate_status.py  0012_alter_lemma_pos.py  0012_education_educationlemma_board.py  0013_alter_lemma_pos.py  0013_lemma_educations.py  0014_alter_lemma_translate.py  (+10 more)
simcont/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
users/: admin.py  apps.py  auth_backends.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
(+4 files in other folders)
