[tool.poetry]
name = "simcont"
version = "0.1.0"
description = "Application for learning languages"
authors = ["Gizar <gizarir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
